# learningroad

./: manage.py  pyproject.toml
learningroad/: asgi.py  settings.py  urls.py  wsgi.py
skill/: admin.py  models.py
