[tool.poetry]
name = "learningroad"
version = "0.1.0"
description = "Find a learning road for your desired skills"
authors = ["Cleverdevs.Community"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
